cabal-version: 2.2

name:           application
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/application#readme>
homepage:       https://github.com/githubuser/application#readme
bug-reports:    https://github.com/githubuser/application/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2024 Author name here
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/githubuser/application

library
  exposed-modules:
      Elvanto
      Notifications
      NotifyPendingRequests
      OverdueTodos
      Todos.Domain
      Todos.Types
      Util
  other-modules:
      Paths_application
  autogen-modules:
      Paths_application
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , http-client
    , mtl
    , neat-interpolation
    , regex-tdfa
    , req
    , text
    , time
  default-language: Haskell2010

executable api-exe
  main-is: Main.hs
  other-modules:
      Paths_application
  autogen-modules:
      Paths_application
  hs-source-dirs:
      api
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , application
    , base >=4.7 && <5
    , blaze-html
    , bytestring
    , http-client
    , mtl
    , neat-interpolation
    , regex-tdfa
    , req
    , servant
    , servant-blaze
    , servant-server
    , shakespeare
    , text
    , time
    , warp
  default-language: Haskell2010

executable worker-exe
  main-is: Main.hs
  other-modules:
      Paths_application
  autogen-modules:
      Paths_application
  hs-source-dirs:
      worker
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aeson
    , application
    , base >=4.7 && <5
    , blaze-html
    , bytestring
    , hspec
    , http-client
    , mtl
    , neat-interpolation
    , regex-tdfa
    , req
    , text
    , time
  default-language: Haskell2010

test-suite application-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Config
      ElvantoSpec
      TestUtil
      Todos.DomainSpec
      Todos.TestUtil
      Todos.TypesSpec
      Paths_application
  autogen-modules:
      Paths_application
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends:
      hspec-discover:hspec-discover
  build-depends:
      aeson
    , application
    , base >=4.7 && <5
    , blaze-html
    , bytestring
    , hspec-discover
    , hspec
    , http-client
    , mtl
    , neat-interpolation
    , regex-tdfa
    , req
    , scotty
    , servant
    , servant-blaze
    , servant-server
    , shakespeare
    , text
    , time
    , wai-middleware-static
    , warp
  default-language: Haskell2010
